# Vois-v4.-Release

./: .gitignore  CHANGELOG.md  CONTRIBUTOR_CONSTITUTION.md  README.md  RUNBOOK.md  compose.yaml  launch_vois_api_8001.ps1  launch_vois_clean.ps1  launch_vois_web_5174.cmd  package.json
apps/api/: .env.example  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0b0e456a756e_kb_reading_states_and_systemic_flags_.py  1fc09c34438b_merge_parallel_heads.py  20260313_0001_initial_schema.py  20260314_0002_copilot_messages.py  20260314_0003_file_assets.py  20260314_0004_auth_sessions.py  20260314_0005_integration_event_hardening.py  20260315_0006_integration_event_retry_posture.py  20260317_0007_add_cafe_vertical.py  20260318_0008_task_editing_enrichment.py  20260318_0009_ecl_core_tables.py  20260318_0010_employee_role_and_venue_scope.py  (+16 more)
apps/api/app/: main.py
apps/api/tests/: conftest.py  diag_imports.py  test_ai_contracts.py  test_ai_runtime.py  test_api.py  test_api_cutover.py  test_assessments.py  test_audit.py  test_auth.py  test_authz.py  test_cafe_journey.py  test_cafe_vertical.py  test_copilot.py  test_ecl_cycle.py  test_engine.py  test_engine_history.py  test_execution_workspace.py  test_files.py  test_intake.py  test_integrations.py  test_legacy_parity.py  test_manager_workflow.py  test_ontology.py  test_organization.py  test_persistence.py  test_phase3_persistence_migration.py  test_phase4_api_cutover_parity.py  test_phase6_integration.py  test_pocket_workflow.py  test_recovery_import.py  test_workbench.py
apps/web/: .env.example  (+8 more)
(+2186 files in other folders)
