[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ois-api"
version = "0.1.0"
description = "Operational Intelligence System backend foundation"
requires-python = ">=3.13"
dependencies = [
  "alembic>=1.16.4",
  "fastapi>=0.116.0",
  "anthropic>=0.52.0",
  "firebase-admin>=6.5.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "sqlalchemy>=2.0.38",
  "uvicorn>=0.35.0",
  "psycopg[binary]>=3.2.6"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
  "httpx>=0.28.1"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "../.."]
